Added text for aestetics.

--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
 
 </head>
 <body>
-
-    <div id="particles-js">
-
-       <div id="headerContainer"> <h1 id="headerText">Particle Sample</h1>
-       </div>
+    <div id="headerContainer"> <h1 id="headerText">Particle Sample</h1>
     </div>
+
+    <p id="mainParagraph">This is a test. <br>Particle value : 400 <br>  size value : 5, <br>
+        "anim": {
+            "enable":true,
+            "speed": 10
+        }</p>
+    <div id="particles-js"></div>
 
     
 
