--- a/index.html
+++ b/index.html
@@ -14,14 +14,17 @@
 
 </head>
 <body>
+  
     <div id="headerContainer"> <h1 id="headerText">Particle Sample</h1>
+        <div id="bar"></div>
     </div>
 
     <p id="mainParagraph">This is a test. <br>Particle value : 400 <br>  size value : 5, <br>
-        "anim": {
+        anim: {
             "enable":true,
             "speed": 10
         }</p>
+   
     <div id="particles-js"></div>
 
     
