added scrolling text

--- a/index.html
+++ b/index.html
@@ -37,5 +37,19 @@
     console.log("particles.json loaded...");
     })
     </script>
+
+<section>
+    <div id="mainContainer">
+        <span> THIS IS A TEST</span>
+        <span> THIS IS A TEST</span>
+        <span> THIS IS A TEST</span>
+        <span> THIS IS A TEST</span>
+        <span> THIS IS A TEST</span>
+        <span> THIS IS A TEST</span>
+        <span> THIS IS A TEST</span>
+        <span> THIS IS A TEST</span>
+    </div>
+
+</section>
 </body>
 </html>
