added grain and grain images

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 <body>
   
+    <div id="grainTexture"></div>
     <div id="headerContainer"> <h1 id="headerText">Particle Sample</h1>
         <div id="bar"></div>
     </div>
